--- a/public/application.css
+++ b/public/application.css
@@ -18,10 +18,24 @@ input {
     margin: auto;
 }
 
-.nav {
-    background: #2c3840;
-}
-
 h2 {
     text-align: center;
+}
+
+hr {
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+.alert-warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
