--- a/public/application.css
+++ b/public/application.css
@@ -16,6 +16,8 @@ input {
     padding-left: 15px;
     max-width: 1024px;
     margin: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding-bottom: 30px;
 }
 
 h2 {
@@ -41,10 +43,30 @@ hr {
 }
 
 body {
-    background-image: url("weather.png");
+    background-image: url("pen2.jpg");
     background-repeat: repeat-xy;
+    background-size: 100%;
     /*-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;*/
+}
+
+body:before {
+    content: "";
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    background: inherit;
+    z-index: -1;
+
+    filter        : blur(5px);
+    -moz-filter   : blur(5px);
+    -webkit-filter: blur(5px);
+    -o-filter     : blur(5px);
+
+    transition        : all 2s linear;
+    -moz-transition   : all 2s linear;
+    -webkit-transition: all 2s linear;
+    -o-transition     : all 2s linear;
 }
