--- a/public/application.css
+++ b/public/application.css
@@ -18,6 +18,7 @@ input {
     margin: auto;
     background-color: rgba(255, 255, 255, 0.8);
     padding-bottom: 30px;
+    position: relative;
 }
 
 h2 {
@@ -43,30 +44,23 @@ hr {
 }
 
 body {
-    background-image: url("pen2.jpg");
-    background-repeat: repeat-xy;
-    background-size: 100%;
-    /*-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
+    background: url("pen2.jpg") no-repeat bottom center fixed;;
+    background-size: cover;
 }
 
-body:before {
-    content: "";
+.blur {
     position: absolute;
     width : 100%;
     height: 100%;
-    background: inherit;
+    top: 0;
+    left: 0;
     z-index: -1;
 
-    filter        : blur(5px);
-    -moz-filter   : blur(5px);
-    -webkit-filter: blur(5px);
-    -o-filter     : blur(5px);
+    background: url('pen2.jpg') no-repeat bottom center fixed;
+    background-size: cover;
 
-    transition        : all 2s linear;
-    -moz-transition   : all 2s linear;
-    -webkit-transition: all 2s linear;
-    -o-transition     : all 2s linear;
+    filter        : blur(3px);
+    -moz-filter   : blur(3px);
+    -webkit-filter: blur(3px);
+    -o-filter     : blur(3px);
 }
